samples/_failures_safe/1761599509_a24c1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03264397.c: In function ‘print_token’:
./samples/SAFE/__tmp_03264397.c:164:33: error: missing terminating " character
  164 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |                                 ^~~~~~~~~
./samples/SAFE/__tmp_03264397.c:164:9: error: expected expression at end of input
  164 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |         ^~~~~~~~
./samples/SAFE/__tmp_03264397.c:164:9: error: expected declaration or statement at end of input
